data/manifests/artifacthub/runix/pgadmin4/001_networkpolicy_release-name-pgadmin4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-pgadmin4
  namespace: default
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/version: '9.8'
    helm.sh/chart: pgadmin4-1.50.0
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
      app.kubernetes.io/instance: release-name
  ingress:
  - ports:
    - port: 80
